# Data_Science_Introduction

./: .gitignore
Classes/: EDA-DataCleaning.ipynb  MachineLearning.ipynb  Matplotlib-Seaborn.ipynb  Notas.txt  Numpy-Regex.ipynb  Pandas.ipynb  PythonIntroduction.ipynb
Classes/csv-files/: StudentsInfo.csv  country_city_report.csv  nasa_photos.csv  ny_times.csv  scrapping_ny_times.csv  students_concat.csv  students_final.csv  students_merge.csv
Classes/html-files/: call_center_comments_profile.html
Classes/json-files/: dummy_data.py  sales_data.json
Workshops/Workshop 1/: Workshop_1.ipynb
Workshops/Workshop 2/: Workshop_2.ipynb
Workshops/Workshop 2/assets/: Energy Indicators New.xlsx
Workshops/Workshop 3/: Workshop_3.ipynb
Workshops/Workshop 4/: Workshop_4.ipynb
data-science-project/: pyproject.toml
