[tool.poetry]
name = "data-science-project"
version = "0.1.0"
description = ""
authors = ["NicoG2023 <nguevarah@udistrital.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.4"
pandas = "^2.2.2"
pandera = "^0.19.3"
pydantic = "^2.7.4"
tzdata = "^2024.1"
openpyxl = "^3.1.4"
beautifulsoup4 = "^4.12.3"
matplotlib = "<3.9.0"
seaborn = "^0.13.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
jupyterlab = "^4.2.2"
memory-profiler = "^0.61.0"
spacy = "^3.7.5"
ydata-profiling = "^4.8.3"
pipe = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
